passing over to Eric

--- a/app/assets/javascripts/welcome.js.erb
+++ b/app/assets/javascripts/welcome.js.erb
@@ -1,7 +1,7 @@
 // Generate a Bates distribution of 10 random variables.
-var value = <%= 92.4 %> // 82.4
+var value = 82.4
 var maxTemps = d3.range(50).map(function() { return 32 + 1.8 * (d3.random.bates(10)() * 20 + 20) });
-var minTemps = d3.range(50).map(function() { return 32 + 1.8 * (d3.random.bates(10)() * 20 + 20) });
+// var minTemps = d3.range(50).map(function() { return 32 + 1.8 * (d3.random.bates(10)() * 20 + 20) });
 // var years = d3.range(50).map(function() { return })
 
 
