no more dummy values

--- a/app/assets/javascripts/place.js.erb
+++ b/app/assets/javascripts/place.js.erb
@@ -1,6 +1,6 @@
 // Generate a Bates distribution of 10 random variables.
-var value = gon.max_forecast * 1.8 + 32 // 82.4
-var maxTemps = gon.past.maxs.map(function(d) {return d * 1.8 + 32}) // d3.range(50).map(function() { return 32 + 1.8 * (d3.random.bates(10)() * 20 + 20) });
+var value = gon.max_forecast // 82.4
+var maxTemps = gon.past.maxs // d3.range(50).map(function() { return 32 + 1.8 * (d3.random.bates(10)() * 20 + 20) });
 // var minTemps = d3.range(50).map(function() { return 32 + 1.8 * (d3.random.bates(10)() * 20 + 20) });
 // var years = d3.range(50).map(function() { return })
 
