--- a/app/assets/javascripts/place.js.erb
+++ b/app/assets/javascripts/place.js.erb
@@ -94,6 +94,7 @@ svg.append("line")
     .attr("x2", x(value))
     .attr("y2", height)
     .attr("stroke-width", 2)
+    .attr("opacity", 0.5)
     .attr("stroke", "black");
 
 svg.append("text")
