--- a/app/views/place/show.html.erb
+++ b/app/views/place/show.html.erb
@@ -4,7 +4,11 @@
         <p id="sentence">(the weather in <%= @place.name %> is <%= "not " if !@weird %>weird.)</p>
     </div>
     <div class="row">
-        <div class="col-lg-12" id="graphWrapper">
+        <div class="col-lg-12" id="maxGraphWrapper" class="graphWrapper">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12" id="minGraphWrapper" class="graphWrapper">
         </div>
     </div>
 </div>
