--- a/app/assets/javascripts/place.js.erb
+++ b/app/assets/javascripts/place.js.erb
@@ -1,113 +1,121 @@
 // Generate a Bates distribution of 10 random variables.
-var value = gon.max_forecast // 82.4
+var forecast = gon.forecast // 82.4
 var past = gon.past // d3.range(50).map(function() { return 32 + 1.8 * (d3.random.bates(10)() * 20 + 20) });
 var maxTemps = past.map(function(d) { return d.max })
+var minTemps = past.map(function(d) { return d.min })
 // var minTemps = d3.range(50).map(function() { return 32 + 1.8 * (d3.random.bates(10)() * 20 + 20) });
 // var years = d3.range(50).map(function() { return })
 
 
 
-// A formatter for counts.
-var formatCount = d3.format(",.0f");
+var makeHist = function(wrapperId, value, temps, title) {
+    // A formatter for counts.
+    var formatCount = d3.format(",.0f");
 
-var margin = {top: 60, right: 30, bottom: 30, left: 30},
-    width = parseInt(d3.select("#graphWrapper").style("width")) - margin.left - margin.right,
-    height = 300 - margin.top - margin.bottom;
+    var margin = {top: 60, right: 30, bottom: 30, left: 30},
+        width = parseInt(d3.select("#" + wrapperId).style("width")) - margin.left - margin.right,
+        height = 300 - margin.top - margin.bottom;
 
-var x_with_value = d3.scale.linear()
-    .domain([Math.floor(d3.extent(maxTemps.concat(value))[0]), Math.ceil(d3.extent(maxTemps.concat(value))[1])])
-    .range([0, width]);
+    var x_with_value = d3.scale.linear()
+        .domain([Math.floor(d3.extent(maxTemps.concat(value))[0]), Math.ceil(d3.extent(maxTemps.concat(value))[1])])
+        .range([0, width]);
 
-// Generate a histogram using twenty uniformly-spaced bins.
-var tickNum = 15
-var data = d3.layout.histogram()
-    .value(function(d) {return d.max})
-    .bins(x_with_value.ticks(tickNum))
-    (past);
+    // Generate a histogram using twenty uniformly-spaced bins.
+    var tickNum = 15
+    var data = d3.layout.histogram()
+        .value(function(d) {return d.max})
+        .bins(x_with_value.ticks(tickNum))
+        (past);
 
-x = d3.scale.linear()
-    .domain(d3.extent(x_with_value.ticks(tickNum)))
-    .range([0,width]);
+    x = d3.scale.linear()
+        .domain(d3.extent(x_with_value.ticks(tickNum)))
+        .range([0,width]);
 
-var y = d3.scale.linear()
-    .domain([0, d3.max(data, function(d) { return d.y; })])
-    .range([height, 0]);
+    var y = d3.scale.linear()
+        .domain([0, d3.max(data, function(d) { return d.y; })])
+        .range([height, 0]);
 
-var xAxis = d3.svg.axis()
-    .scale(x)
-    .orient("bottom")
-    .tickFormat(function(d) {return d + "ºF"});
+    var xAxis = d3.svg.axis()
+        .scale(x)
+        .orient("bottom")
+        .tickFormat(function(d) {return d + "ºF"});
 
-var svg = d3.select("#graphWrapper").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+    var svg = d3.select("#" + wrapperId).append("svg")
+        .attr("width", width + margin.left + margin.right)
+        .attr("height", height + margin.top + margin.bottom)
+      .append("g")
+        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 
+        // line
+    svg.append("line")
+        .attr("x1", x(value))
+        .attr("y1", -10)
+        .attr("x2", x(value))
+        .attr("y2", height)
+        .attr("stroke-width", 2)
+        .attr("opacity", 0.5)
+        .attr("stroke", "black");
 
-var bar = svg.selectAll(".bar")
-    .data(data)
-  .enter().append("g")
-    .attr("class", "bar")
-    .attr("transform", function(d) {
-        return "translate(" + x(d.x) + "," + y(d.y) + ")";
-    });
+    var bar = svg.selectAll(".bar")
+        .data(data)
+      .enter().append("g")
+        .attr("class", "bar")
+        .attr("transform", function(d) {
+            return "translate(" + x(d.x) + "," + y(d.y) + ")";
+        });
 
-bar.append("rect")
-    .attr("x", 1)
-    .attr("width", x(data[0].dx + x.domain()[0]) - 2)
-    .attr("height", function(d) { return height - y(d.y); });
+    bar.append("rect")
+        .attr("x", 1)
+        .attr("width", x(data[0].dx + x.domain()[0]) - 2)
+        .attr("height", function(d) { return height - y(d.y); });
 
-data.forEach(function(d,i) {
-    d = d.sort(function(e,f) { return f.year - e.year})
-    d.forEach(function(j,k) {
-        svg.append("text")
-        .attr("dy", ".75em")
-        .attr("y", 5 + y(d.y) + k * 10)
-        .attr("x", x(d.x) + x(data[0].dx + x.domain()[0]) / 2)
-        .attr("text-anchor", "middle")
-        // .attr("fill", "white")
-        // .attr("stroke", "white")
-        .text(j.year);
+    data.forEach(function(d,i) {
+        d = d.sort(function(e,f) { return f.year - e.year})
+        d.forEach(function(j,k) {
+            svg.append("text")
+            .attr("dy", ".75em")
+            .attr("y", 5 + y(d.y) + k * 10)
+            .attr("x", x(d.x) + x(data[0].dx + x.domain()[0]) / 2)
+            .attr("text-anchor", "middle")
+            // .attr("fill", "white")
+            // .attr("stroke", "white")
+            .text(j.year);
+        })
     })
-})
 
         
 
-// .append("text")
-//     .attr("dy", ".75em")
-//     .attr("y", 6)
-//     .attr("x", x(data[0].dx + x.domain()[0]) / 2)
-//     .attr("text-anchor", "middle")
-//     .text(function(d) { return formatCount(d.y); });
+    // .append("text")
+    //     .attr("dy", ".75em")
+    //     .attr("y", 6)
+    //     .attr("x", x(data[0].dx + x.domain()[0]) / 2)
+    //     .attr("text-anchor", "middle")
+    //     .text(function(d) { return formatCount(d.y); });
 
-svg.append("g")
-    .attr("class", "x axis")
-    .attr("transform", "translate(0," + height + ")")
-    .call(xAxis);
+    svg.append("g")
+        .attr("class", "x axis")
+        .attr("transform", "translate(0," + height + ")")
+        .call(xAxis);
 
-    // line
-svg.append("line")
-    .attr("x1", x(value))
-    .attr("y1", 0)
-    .attr("x2", x(value))
-    .attr("y2", height)
-    .attr("stroke-width", 2)
-    .attr("opacity", 0.5)
-    .attr("stroke", "black");
 
-svg.append("text")
-    .attr("dy", ".75em")
-    .attr("y", -14)
-    .attr("x", x(value))
-    .attr("text-anchor", "middle")
-    .text("2014");
+    svg.append("text")
+        .attr("dy", ".75em")
+        .attr("y", -20)
+        .attr("x", x(value))
+        .attr("text-anchor", "middle")
+        .text("2014");
 
-svg.append("text")
-    .attr("dy", "2em")
-    .attr("y", -70)
-    .attr("x", width/2)
-    .attr("text-anchor", "middle")
-    .style("font-size", "20px")
-    .text("Daily high temperatures for " + Date().substring(4,10));
+    svg.append("text")
+        .attr("dy", "2em")
+        .attr("y", -70)
+        .attr("x", width/2)
+        .attr("text-anchor", "middle")
+        .style("font-size", "20px")
+        .text(title + Date().substring(4,10));
+    
+}
+
+
+makeHist("maxGraphWrapper", forecast.max, maxTemps, "Daily high temperatures for ")
+makeHist("minGraphWrapper", forecast.min, minTemps, "Daily low temperatures for ")
