--- a/app/views/place/show.html.erb
+++ b/app/views/place/show.html.erb
@@ -11,4 +11,9 @@
         <div class="col-lg-12" id="minGraphWrapper" class="graphWrapper">
         </div>
     </div>
+    <hr>
+    <footer>
+        <p>by Eric Potash and Jonah Bloch-Johnson. Code on <a href="https://github.com/jsbj/istheweatherweird">github.com</a></p>
+    </footer>
 </div>
+
